--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=CR-SOFT
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zR1v06F1xhBxX2hSUTDFvh7JokI+eiE3g3ALcRZG3LY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=booster
+DB_USERNAME=root
+DB_PASSWORD=Crsoft16&
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
